# cli-code

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  .pytest.ini  .ruff.toml  .sonarcloud.properties  CHANGELOG.md  CODE_COVERAGE.md  CONTRIBUTING.md  README.md  RELEASE.md  TODO_gemini_loop.md  conftest.py  find_low_coverage.py  mcp_stub_server.py  pr_body.txt  pr_description.md  pyproject.toml  pytest.ini  run_core_tests.sh  run_coverage_ci.sh  run_specific_coverage.sh  run_targeted_coverage.sh  run_tests_with_coverage.py  sonar-project.properties
.cursor/: mcp.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: coverage_improvement.md
.github/workflows/: python-ci.yml
.rules/: context.md  tools.md
docs/: CODE_COVERAGE.md  COVERAGE_IMPROVEMENTS.md  DIAGRAM_VALIDATION.md  KNOWN_ISSUES.md  README.md  RELEASE.md  TESTING.md  architecture.md  brainstorm.md  changelog.md  context.md  context_rules.md  contributing.md  install.md  mcp-integration.md  mcp_integration_plan.md  releases.md  uv_migration_plan.md
examples/: github_tool_demo.py  mcp_calculator_example.py
scripts/: configure_branch_protection.sh  find_hanging_tests.sh  find_low_coverage.py  focused_test_runner_coverage.sh  generate_coverage_badge.py  ghauth.sh  install.sh  memory.sh  memory_backup.json  memory_restore.sh  push_to_github.sh  run_all_tests.sh  run_api_tests.sh  run_core_tests.sh  run_coverage.sh  run_coverage_ci.sh  run_coverage_local.sh  run_fixed_sonar_scan.sh  run_sonar_scan.sh  run_specific_coverage.sh  run_targeted_coverage.sh  run_tests_with_coverage.py  setup_pre_commit.sh  test_coverage_local.sh  test_runner_coverage.sh  tools_coverage.sh
src/cli_code/: config.py  main.py
src/cli_code/mcp/: __init__.py  cli.py  client.py  config.py  integrations.py  model_adapter.py
src/cli_code/mcp/adapters/: __init__.py  gemini_adapter.py
src/cli_code/mcp/tools/: __init__.py  executor.py  formatter.py  models.py  registry.py  service.py
src/cli_code/models/: base.py  constants.py  gemini.py  ollama.py
src/cli_code/tools/: tree_tool.py
src/cli_code/utils/: history_manager.py  log_config.py  tool_helpers.py  tool_registry.py
src/mcp_code/: __init__.py  __main__.py  config.py
src/mcp_code/mcp_client/: __init__.py  language_client.py  mcp_pydantic_base.py
src/mcp_code/mcp_client/host/: server_manager.py
src/mcp_code/mcp_client/messages/: __init__.py  error_codes.py  exceptions.py  json_rpc_message.py  message_method.py  send_message.py
test_dir/: conftest.py  test.py  test_basic_functions.py  test_config.py  test_config_comprehensive.py  test_config_edge_cases.py  test_config_missing_methods.py  test_context_handling.py  test_directory_tools.py  test_file_tools.py  test_gemini_model.py  test_gemini_model_advanced.py  test_gemini_model_coverage.py  test_gemini_model_error_handling.py  test_main.py  test_main_comprehensive.py  test_main_edge_cases.py  test_main_improved.py  test_model_basic.py  test_model_error_handling_additional.py  test_model_integration.py  test_models_base.py  test_ollama_model_advanced.py  test_ollama_model_context.py  test_ollama_model_coverage.py  test_ollama_model_error_handling.py  test_quality_tools.py  test_summarizer_tool.py  test_system_tools.py  test_system_tools_comprehensive.py  test_tools_base.py  test_tools_basic.py  test_tools_init_coverage.py  test_tree_tool.py  test_tree_tool_edge_cases.py  test_tree_tool_original.py  test_utils.py  test_utils_comprehensive.py
test_dir/improved/: test_quality_tools.py  test_summarizer_tool.py  test_tree_tool.py
tests/: test_agent.py  test_cli.py  test_config.py  test_config_additional.py  test_config_comprehensive.py  test_config_missing_methods.py  test_executor.py  test_formatter.py  test_gemini_adapter.py  test_gemini_adapter_improved.py  test_github_tool.py  test_integrations.py  test_main.py  test_main_edge_cases.py  test_main_improved.py  test_mcp_client.py  test_mcp_client_improved.py  test_mcp_config.py  test_model_adapter.py  test_models.py  test_registry.py  test_service.py  test_utils.py  test_utils_comprehensive.py  test_weather_tool.py
tests/mcp_tests/: test_config.py  test_main.py
tests/mcp_tests/mcp/: test_mcp_fallback_real_pydantic.py  test_mcp_pydantic_fallback.py  test_pydantic_base_model_dump.py
tests/mcp_tests/mcp/messages/: test_fallback_send_tools.py  (+13 more)
tests/mcp_tests/mcp_client/: test_language_client.py  test_mcp_pydantic_base.py  test_mcp_pydantic_base_real.py
tests/models/: test_base.py  test_gemini.py  test_gemini_agent_loop.py  test_gemini_model.py  test_gemini_model_additional.py  test_gemini_model_additional_coverage.py  test_gemini_model_advanced.py  test_gemini_model_coverage.py  test_gemini_model_coverage_additions.py  test_gemini_model_edge_cases.py  test_gemini_model_error_handling.py  test_gemini_model_missing_coverage.py  test_gemini_model_refactored.py  test_model_basic.py  test_model_error_handling_additional.py  test_model_integration.py  test_models_base.py  test_ollama.py  test_ollama_model.py  test_ollama_model_advanced.py  test_ollama_model_basic_coverage.py  test_ollama_model_context.py  test_ollama_model_coverage.py  test_ollama_model_edge_cases.py  test_ollama_model_error_handling.py
tests/tools/: test_base_tool.py  test_calculator.py  test_calculator_tool.py  test_debug_function_decl.py  test_directory_tools.py  test_executor.py  test_file_tools.py  test_formatter.py  test_github_tool.py  test_mcp_integration.py  test_mcp_tools.py  test_models.py  test_models_improved.py  test_quality_tools.py  test_quality_tools_original.py  test_registry.py  test_service.py  test_summarizer_tool.py  test_summarizer_tool_original.py  test_system_tools.py  test_system_tools_comprehensive.py  test_task_complete_tool.py  test_test_runner_tool.py  test_tools_base.py  test_tools_basic.py  test_tools_init_coverage.py  test_tree_tool.py  test_tree_tool_edge_cases.py  test_tree_tool_original.py  test_weather_tool.py
tests/tools/examples/: test_github.py
tests/utils/: test_history_manager.py  test_log_config.py  test_tool_helpers.py  test_tool_registry.py
(+36 files in other folders)
