[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-code" 
version = "0.1.106"  
authors = [
  { name="Raiza Martin", email="raiza@huxe.ai" }
]
description = "An AI coding assistant CLI using Google's Gemini models with function calling."
readme = "README.md"
requires-python = ">=3.9" # Gemini library might require newer Python
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "google-generativeai>=0.5.0", # <<< ADDED/UPDATED GEMINI LIBRARY
    "click>=8.0",              # For CLI framework
    "rich>=13.0",             # For nice terminal output
    "PyYAML>=6.0",            # For config handling
    "tiktoken>=0.6.0",          # <-- ADDED TIKTOKEN DEPENDENCY
    "questionary>=2.0.0",     # <-- ADDED QUESTIONARY DEPENDENCY BACK
    "openai>=1.0.0", # Add openai library dependency
    "protobuf>=4.0.0", # Add protobuf for schema conversion
    # Add any other direct dependencies your tools might have (e.g., requests for web_tools)
]

# Add optional dependencies for development
[project.optional-dependencies]
dev = [
    "build>=1.0.0",   # For building the package
    "pytest>=7.0.0",  # For running tests
    "ruff>=0.1.0",    # For linting and formatting
    "protobuf>=4.0.0", # Also add to dev dependencies
    # Add other dev tools like coverage, mypy etc. here if needed
]

[project.urls]
"Homepage" = "https://github.com/BlueCentre/cli-code"
"Bug Tracker" = "https://github.com/BlueCentre/cli-code/issues"

# This makes the `cli-code` command run the `cli` function in `main.py`
[project.scripts]
cli-code = "cli_code.main:cli"

[tool.setuptools.packages.find]
where = ["src"]  # look for packages in src/