[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-code-agent"
version = "0.3.0"
authors = [
  { name="James Nguyen", email="git@nocentre.net" }
]
description = "An AI coding assistant CLI using Google's Gemini models with function calling."
readme = "README.md"
requires-python = ">=3.9" # Gemini library might require newer Python
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "google-generativeai>=0.5.0", # <<< ADDED/UPDATED GEMINI LIBRARY
    "click>=8.0",              # For CLI framework
    "rich>=13.0",             # For nice terminal output
    "PyYAML>=6.0",            # For config handling
    "tiktoken>=0.6.0",          # <-- ADDED TIKTOKEN DEPENDENCY
    "questionary>=2.0.0",     # <-- ADDED QUESTIONARY DEPENDENCY BACK
    "openai>=1.0.0", # Add openai library dependency
    "protobuf>=4.0.0", # Add protobuf for schema conversion
    "google-cloud-aiplatform", # Add vertexai dependency
    "anyio>=3.6.0",            # <-- ADDED for vendored mcp-code
    # Add any other direct dependencies your tools might have (e.g., requests for web_tools)
]

# Add optional dependencies for development
[project.optional-dependencies]
dev = [
    "build>=1.0.0",   # For building the package
    "pytest>=7.0.0",  # For running tests
    "pytest-asyncio>=0.21.0", # <-- ADDED for MCP async tests
    "pytest-timeout>=2.2.0",  # For test timeouts
    "pytest-mock>=3.6.0", # Add pytest-mock dependency for mocker fixture
    "ruff>=0.1.0",    # For linting and formatting
    "protobuf>=4.0.0", # Also add to dev dependencies
    "pre-commit>=3.5.0",  # For pre-commit hooks
    "mypy>=1.0.0",
    "types-requests", # For requests type hints
    "types-toml", # For toml type hints
    "ollama>=0.1.0", # Added for Ollama model tests
    # Add other dev tools like coverage, mypy etc. here if needed
]

[project.urls]
"Homepage" = "https://github.com/BlueCentre/cli-code"
"Bug Tracker" = "https://github.com/BlueCentre/cli-code/issues"

# This makes the `cli-code` command run the `cli` function in `main.py`
[project.scripts]
cli-code = "cli_code.main:cli"

# Add the package-dir mapping directly under [tool.setuptools]
[tool.setuptools]
package-dir = { "" = "src" }

# Use automatic package finding for src-layout, specifying includes
[tool.setuptools.packages.find]
where = ["src"]  # look for packages in src/
include = ["cli_code*", "mcp_code*"] # Explicitly include our packages
namespaces = false

# Add Ruff configuration
[tool.ruff]
exclude = [
    ".git",
    ".env",
    ".venv",
    ".vscode",
    ".rules",
    "env",
    "venv",
    "docs",
    "__pycache__",
]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
# Enable a set of rules
select = ["E", "F", "I", "B"]
# Ignore certain errors that are difficult to fix in this codebase
ignore = ["E701", "E702", "E501", "F401", "F541", "E402", "E721", "F841", "F403", "E203", "F405", "F821"]

# Allow autofix for all enabled rules (when `--fix`) is used.
fixable = ["ALL"]
unfixable = []

# Ignore 'import' errors for pytest in test files
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F811", "E402", "F811", "F403", "F405", "E711", "E712", "F821"]

# Add pytest and pytest-cov configuration
[tool.pytest.ini_options]
# Adding pythonpath here for consistency, although pytest.ini should also work
pythonpath = ["src"]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["cli_code", "mcp_code"] # Include mcp_code in coverage source
omit = [
    "*/.rules/*",
    "*/.venv/*",
    "*/.pytest_cache/*",
    "*/docs/*",
    "tests/*",
    "*/venv/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

# Add these new sections for better coverage configuration
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
precision = 2
show_missing = true
fail_under = 80  # Minimum coverage percentage required

[tool.coverage.html]
directory = "coverage_html"

[tool.coverage.xml]
output = "coverage.xml"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.26.0"
pytest-cov = "^6.1.1"
pytest-mock = "^3.14.0"
pytest-timeout = "^2.3.1"
anyio = "^4.9.0"
trio = "^0.26.0"
ruff = "^0.5.0"
pre-commit = "^3.3.3"
ipython = "^8.12.0"
ipdb = "^0.13.13"
pylint = "^3.0.3"
pytest-xdist = "^3.3.1"
coverage = {extras = ["toml"], version = "^7.2.7"}
pytest-clarity = "^1.0.1"
pytest-sugar = "^1.0.0"
